Generic and custom APIs work well

--- a/views/index.pug
+++ b/views/index.pug
@@ -5,3 +5,5 @@ block content
   div.jumbotron(style="margin-top:2em")
     h1 Lessiki
     p A platform for lexica of the Maltese language
+
+  != content
