--- a/views/edit.pug
+++ b/views/edit.pug
@@ -7,31 +7,14 @@ block content
       div.btn-group#buttons
         a.btn.btn-default#btn-load
           +icon('repeat', 'Reset')
-        a.btn.btn-warning#btn-sort 
-          +icon('sort-by-attributes', 'Sort languages')
         a.btn.btn-success#btn-save
           +icon('ok', 'Save')
-        a.btn.btn-danger#btn-delete 
+        a.btn.btn-danger#btn-delete
           +icon('remove', 'Delete')
-        //- a.btn.btn-default#btn-cancel(href=baseURL+"/") Cancel
 
   div#editor-holder
-    
+
   style.
-    .tt-menu.tt-open {
-      background-color: rgba(255, 255, 255, 0.9);
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      min-width: 8em;      
-    }
-    .tt-menu.tt-open .tt-suggestion {
-      padding: 3px 5px;
-    }
-    .tt-menu.tt-open .tt-suggestion:hover,
-    .tt-menu.tt-open .tt-suggestion.tt-cursor {
-      cursor: pointer;
-      background-color: lemonchiffon;
-    }
     .affix {
       top: 0px;
       right: 10px;
@@ -48,80 +31,30 @@ block content
       editor.on('ready', function () {
         $("#btn-load").trigger('click')
       })
-      editor.on('change', function () {
-        var langs = new Bloodhound({
-          datumTokenizer: Bloodhound.tokenizers.whitespace,
-          queryTokenizer: Bloodhound.tokenizers.whitespace,
-          local: !{JSON.stringify(languages)}
-        })
-        var refs = new Bloodhound({
-          datumTokenizer: Bloodhound.tokenizers.whitespace,
-          queryTokenizer: Bloodhound.tokenizers.whitespace,
-          local: !{JSON.stringify(references)}
-        })
-        var opts = {
-          minLength: 1,
-          highlight: true
-        }
-        $('td[data-schemapath^="root.senses"][data-schemapath*="etymologies"] input:not(.typeahead)').addClass('typeahead').typeahead(opts, {
-          name: 'language',
-          source: langs
-        })
-        $('td[data-schemapath^="root.etymology"][data-schemapath$="language"] input:not(.typeahead)').addClass('typeahead').typeahead(opts, {
-          name: 'language',
-          source: langs
-        })
-        $('td[data-schemapath^="root.etymology"][data-schemapath$="reference"] input:not(.typeahead)').addClass('typeahead').typeahead(opts, {
-          name: 'reference',
-          source: refs
-        })
-      })
     })
-    
+
     $("#btn-load").click(function () {
       show_loading()
       $.ajax({
         method: "GET",
-        url: "#{baseURL}/entries/#{id}",
+        url: "#{baseURL}/resources/#{resource}/#{id}",
         success: function (data) {
           editor.setValue(data)
         },
-        error: function (err) {
-          alert(err.statusText + "\n" + err.responseJSON.name + "\n" + err.responseJSON.err)
-        },
+        error: handle_error,
         complete: function () {
           hide_loading()
         }
       })
     })
-    
-    $("#btn-sort").click(function () {
-      show_loading()
-      var langs = !{JSON.stringify(languages)}
-      var data = editor.getValue()
-      console.log(data)
-      for (var i in data.senses) {
-        data.senses[i].etymologies.sort(function (a,b) {
-          var order_a = langs.indexOf(a) > -1 ? langs.indexOf(a) : 9999
-          var order_b = langs.indexOf(b) > -1 ? langs.indexOf(b) : 9999
-          return order_a - order_b
-        })
-      }
-      data.etymology.sort(function (a,b) {
-        var order_a = langs.indexOf(a.language) > -1 ? langs.indexOf(a.language) : 9999
-        var order_b = langs.indexOf(b.language) > -1 ? langs.indexOf(b.language) : 9999
-        return order_a - order_b
-      })
-      editor.setValue(data)
-      hide_loading()
-    })
+
     $("#btn-save").click(function () {
       var id = "#{id}" // null when adding
       show_loading()
       $.ajax({
         method: "POST",
         contentType: "application/json",
-        url: "#{baseURL}/entries/"+id,
+        url: "#{baseURL}/resources/#{resource}/"+id,
         data: JSON.stringify(editor.getValue()),
         success: function (data) {
           if (id) {
@@ -130,9 +63,7 @@ block content
             window.location.replace('#{baseURL}/edit/'+data._id)
           }
         },
-        error: function (err) {
-          alert(err.statusText + "\n" + err.responseJSON.name + "\n" + err.responseJSON.err)
-        },
+        error: handle_error,
         complete: function () {
           hide_loading()
         }
@@ -144,13 +75,11 @@ block content
       show_loading()
       $.ajax({
         method: "DELETE",
-        url: "#{baseURL}/entries/#{id}",
+        url: "#{baseURL}/resources/#{resource}/#{id}",
         success: function () {
           window.location.replace('#{baseURL}/')
         },
-        error: function (err) {
-          alert(err.statusText + "\n" + err.responseJSON.name + "\n" + err.responseJSON.err)
-        },
+        error: handle_error,
         complete: function () {
           hide_loading()
         }
