Add/edit works. Multi-entity. Search (incomplete).

--- a/views/edit.pug
+++ b/views/edit.pug
@@ -60,7 +60,7 @@ block content
           if (id) {
             editor.setValue(data)
           } else {
-            window.location.replace('#{baseURL}/edit/'+data._id)
+            window.location.replace("#{baseURL}/edit?resource=#{resource}&id="+data._id)
           }
         },
         error: handle_error,
