--- a/views/layout.pug
+++ b/views/layout.pug
@@ -16,9 +16,11 @@ html(lang="en")
     - if (useCDN)
       link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css')
       link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css')
+      link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js')
     - else
       link(rel='stylesheet', href=baseURL+'/bootstrap-3.3.4/css/bootstrap.min.css')
       link(rel='stylesheet', href=baseURL+'/bootstrap-3.3.4/css/bootstrap-theme.min.css')
+      link(rel='stylesheet', href=baseURL+'/bootstrap-3.3.4/js/bootstrap.min.js')
 
     style.
       span[data-toggle] {
@@ -76,31 +78,24 @@ html(lang="en")
             span.icon-bar
             span.icon-bar
           a.navbar-brand(href=baseURL+"/",style="color:firebrick") Lessiki
-        form(role="search",action=baseURL+"/",method="GET").navbar-form.navbar-right
-          div.input-group
-            - var search_term = (query) ? query.s : ''
-            input(type="search",name="s",autofocus="true",placeholder="Search",value=search_term).form-control
-            div.input-group-btn
-              button(type="submit").btn.btn-primary
-                span.glyphicon.glyphicon-search
         .navbar-collapse.collapse#navbar-collapse
           ul.nav.navbar-nav
             li
-              a(href=baseURL+"/resources/show") Resources
-            - if (!user)
-              li
-                a(href=baseURL+"/login") Login
-            - if (user)
-              li.dropdown
-                a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-haspopup='true', aria-expanded='false')
-                  span.glyphicon.glyphicon-user
-                  |  #{user.username}
-                  span.caret
-                ul.dropdown-menu
-                  li
-                    a(href=baseURL+"/logout").navbar-link
-                      span.glyphicon.glyphicon-off
-                      |  Logout
+              a(href=baseURL+"/readme") Readme
+            //- - if (!user)
+            //-   li
+            //-     a(href=baseURL+"/login") Login
+            //- - if (user)
+            //-   li.dropdown
+            //-     a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-haspopup='true', aria-expanded='false')
+            //-       span.glyphicon.glyphicon-user
+            //-       |  #{user.username}
+            //-       span.caret
+            //-     ul.dropdown-menu
+            //-       li
+            //-         a(href=baseURL+"/logout").navbar-link
+            //-           span.glyphicon.glyphicon-off
+            //-           |  Logout
 
     .container
       block content
