--- a/views/layout.pug
+++ b/views/layout.pug
@@ -26,6 +26,12 @@ html(lang="en")
       span[data-toggle] {
         border-bottom: 1px dotted #ccc;
       }
+      .striped>div {
+        padding: 1em;
+      }
+      .striped>div:nth-child(even) {
+        background-color: #f9f9f9;
+      }
 
     - if (useCDN)
       script(src='//code.jquery.com/jquery-3.1.0.min.js')
