--- a/views/layout.pug
+++ b/views/layout.pug
@@ -16,11 +16,11 @@ html(lang="en")
     - if (useCDN)
       link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css')
       link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css')
-      link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js')
+      link(rel='stylesheet', href='//cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.11.2/css/bootstrap-select.min.css')
     - else
-      link(rel='stylesheet', href=baseURL+'/bootstrap-3.3.4/css/bootstrap.min.css')
-      link(rel='stylesheet', href=baseURL+'/bootstrap-3.3.4/css/bootstrap-theme.min.css')
-      link(rel='stylesheet', href=baseURL+'/bootstrap-3.3.4/js/bootstrap.min.js')
+      link(rel='stylesheet', href=baseURL+'/module/bootstrap/dist/css/bootstrap.min.css')
+      link(rel='stylesheet', href=baseURL+'/module/bootstrap/dist/css/bootstrap-theme.min.css')
+      link(rel='stylesheet', href=baseURL+'/module/bootstrap-select/dist/css/bootstrap-select.min.css')
 
     style.
       span[data-toggle] {
@@ -34,14 +34,15 @@ html(lang="en")
       }
 
     - if (useCDN)
-      script(src='//code.jquery.com/jquery-3.1.0.min.js')
+      script(src='//code.jquery.com/jquery-3.1.1.min.js')
       script(src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js',defer)
+      script(src='//cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.11.2/js/bootstrap-select.min.js')
     - else
       script(src=baseURL+'/module/jquery/dist/jquery.min.js')
-      script(src=baseURL+'/bootstrap-3.3.4/js/bootstrap.min.js',defer)
+      script(src=baseURL+'/module/bootstrap/dist/js/bootstrap.min.js',defer)
+      script(src=baseURL+'/module/bootstrap-select/dist/js/bootstrap-select.min.js')
 
     script(src=baseURL+'/module/json-editor/dist/jsoneditor.min.js')
-    //- script(src=baseURL+'/javascripts/typeahead.bundle.min.js')
     - if (analyticsCode)
       script.
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -74,7 +75,7 @@ html(lang="en")
         alert(msg)
       }
 
-  body(role="document",style="margin-top:4em")
+  body(role="document",style="margin-top:4em;margin-bottom:4em")
     nav.navbar.navbar-default.navbar-fixed-top
       .container
         .navbar-header
@@ -88,6 +89,14 @@ html(lang="en")
           ul.nav.navbar-nav
             li
               a(href=baseURL+"/readme") Readme
+            li.dropdown
+              a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-haspopup='true', aria-expanded='false')
+                |  Resources  
+                span.caret
+              ul.dropdown-menu
+                for v,k in resources
+                  li
+                    a(href=baseURL+"/resources/"+k)= v.name
             //- - if (!user)
             //-   li
             //-     a(href=baseURL+"/login") Login
@@ -103,5 +112,5 @@ html(lang="en")
             //-           span.glyphicon.glyphicon-off
             //-           |  Logout
 
-    .container
+    .container(role="main")
       block content
