--- a/views/search-multi.pug
+++ b/views/search-multi.pug
@@ -1,8 +1,8 @@
 extends layout
 
 block content
-  h1 Search for “#{search.query}”
-    small   in #{search.resources}
+  h1 Search results for “#{search.query}”
+    //- small   in #{search.resources}
 
   div
     ul.nav.nav-tabs(role='tablist')
