--- a/views/layout.pug
+++ b/views/layout.pug
@@ -21,6 +21,7 @@ html(lang="en")
       link(rel='stylesheet', href=baseURL+'/module/bootstrap/dist/css/bootstrap.min.css')
       link(rel='stylesheet', href=baseURL+'/module/bootstrap/dist/css/bootstrap-theme.min.css')
       link(rel='stylesheet', href=baseURL+'/module/bootstrap-select/dist/css/bootstrap-select.min.css')
+    //- link(rel='stylesheet', href=baseURL+'/module/json-human/css/json.human.css')
 
     style.
       span[data-toggle] {
@@ -43,6 +44,8 @@ html(lang="en")
       script(src=baseURL+'/module/bootstrap-select/dist/js/bootstrap-select.min.js')
 
     script(src=baseURL+'/module/json-editor/dist/jsoneditor.min.js')
+    //- script(src=baseURL+'/module/json-human/src/json.human.js')
+    script(src=baseURL+'/module/json-formatter-js/dist/json-formatter.js')
     - if (analyticsCode)
       script.
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -91,7 +94,7 @@ html(lang="en")
               a(href=baseURL+"/readme") Readme
             li.dropdown
               a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-haspopup='true', aria-expanded='false')
-                |  Resources  
+                |  Resources
                 span.caret
               ul.dropdown-menu
                 for v,k in resources
