--- a/views/layout.pug
+++ b/views/layout.pug
@@ -105,20 +105,20 @@ html(lang="en")
                   for v,k in resources
                     li
                       a(href=baseURL+"/resources/"+k)= v.name
-            //- - if (!user)
-            //-   li
-            //-     a(href=baseURL+"/login") Login
-            //- - if (user)
-            //-   li.dropdown
-            //-     a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-haspopup='true', aria-expanded='false')
-            //-       span.glyphicon.glyphicon-user
-            //-       |  #{user.username}
-            //-       span.caret
-            //-     ul.dropdown-menu
-            //-       li
-            //-         a(href=baseURL+"/logout").navbar-link
-            //-           span.glyphicon.glyphicon-off
-            //-           |  Logout
+            - if (!user)
+              li
+                a(href=baseURL+"/login") Login
+            - if (user)
+              li.dropdown
+                a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-haspopup='true', aria-expanded='false')
+                  span.glyphicon.glyphicon-user
+                  |  #{user.username}
+                  span.caret
+                ul.dropdown-menu
+                  li
+                    a(href=baseURL+"/logout").navbar-link
+                      span.glyphicon.glyphicon-off
+                      |  Logout
 
     .container(role="main")
       block content
