Add checkAccess middleware, still testing

--- a/views/login.pug
+++ b/views/login.pug
@@ -8,14 +8,14 @@ block content
   
   form.form-horizontal(method='post')
     .form-group
-      label.col-sm-1.control-label(for='inputUsername') Username
-      .col-sm-3
+      label.col-sm-2.col-xs-4.control-label(for='inputUsername') Username
+      .col-sm-4.col-xs-6
         input#inputUsername.form-control(type='text',name='username')
     .form-group
-      label.col-sm-1.control-label(for='inputPassword') Password
-      .col-sm-3
+      label.col-sm-2.col-xs-4.control-label(for='inputPassword') Password
+      .col-sm-4.col-xs-6
         input#inputPassword.form-control(type='password',name='password')
     .form-group
-      .col-sm-offset-1.col-sm-10
+      .col-sm-offset-2.col-xs-offset-4.col-xs-4
         button.btn.btn-primary(type='submit') Sign in
   
