Basic tests with auth ok!

--- a/views/home.pug
+++ b/views/home.pug
@@ -15,7 +15,7 @@ block content
     p.lead
       em Lessiki
       |  is a general, flexible system for storing lexical resources related to the Maltese language.
-      | It was set up in order to help us digitise and preserve the various resources available.
+      | It was set up in order to help us digitise and preserve resources of all kinds in a common database.
       | It currently hosts  
       span.label.label-primary= Object.keys(resources).length
       |  resources, containing a total of  
