--- a/views/layout.pug
+++ b/views/layout.pug
@@ -95,7 +95,7 @@ html(lang="en")
         .navbar-collapse.collapse#navbar-collapse
           ul.nav.navbar-nav
             li
-              a(href=baseURL+"/readme") Readme
+              a(href=baseURL+"/readme") API
             if resources
               li.dropdown
                 a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-haspopup='true', aria-expanded='false')
