--- a/views/resource-index.pug
+++ b/views/resource-index.pug
@@ -26,5 +26,5 @@ block content
               button(type="submit").btn.btn-primary.btn
                 span.glyphicon.glyphicon-search
     .col-sm-6
-      a.btn.btn-success(href=baseURL+"/edit?resource="+resource.key)
+      a.btn.btn-success(href=baseURL+"/add?resource="+resource.key)
         +icon('plus', 'Add new entry')
