Remove minor unused

--- a/views/resource-index.pug
+++ b/views/resource-index.pug
@@ -25,6 +25,8 @@ block content
             .input-group-btn
               button(type="submit").btn.btn-primary.btn
                 span.glyphicon.glyphicon-search
-    .col-sm-6
-      a.btn.btn-success(href=baseURL+"/add?resource="+resource.key)
-        +icon('plus', 'Add new entry')
+  if (user)
+    .row
+      .col-sm-6
+        a.btn.btn-success(href=baseURL+"/add?resource="+resource.key)
+          +icon('plus', 'Add new entry')
